<resources>
    <string name="app_name">Contacts Go-Jek</string>
    <string name="fetching_contacts">Fetching Contacts...</string>
    <string name="not_able_fetch_info">Not able to fetch info</string>
    <string name="fetching_profile_info">Fetching Profile Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="cannot_save_some_error_ocur">Cannot Save, some error occur!!!</string>
    <string name="contact_save_successfully">Contact saved successfully!!!</string>
    <string name="saving_info">Saving Info</string>
    <string name="dlg_select_attach_type">Choose Attachment</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="info_not_found_please_retry_again">Info not found, please retry again</string>
    <string name="retry">Retry</string>
    <string name="first_name_validation_message">Please enter first name with atleast 3 characters</string>
    <string name="mobile_number_not_valid">Mobile Phone Number not valid</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="no_network">Network failure or no network</string>
    <string name="failure_occur_message">Some failure occur, please try again</string>

    <!-- For setting tag in Adapter -->
    <item name="iv_tag" type="id" />
</resources>
