<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/iv_profle_pic"
        android:layout_width="@dimen/iv_profile_pic_height"
        android:layout_height="@dimen/iv_profile_pic_height"
        android:src="@drawable/ic_profile_pic"
        android:layout_margin="@dimen/view_medium_margin"/>

    <EditText
        style="@style/EditText_Normal"
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:text="Heisenberg"/>

    <EditText
        style="@style/EditText_Normal"
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:text="Heisenberg"/>

    <EditText
        style="@style/EditText_Normal"
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:text="9090909090"/>

    <EditText
        style="@style/EditText_Normal"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:text="Heisenberg@exaple.com"/>

    <Button
        android:background="@drawable/btn_round_corner"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_margin="@dimen/view_medium_margin"/>
</LinearLayout>
